Fix css of demo map

--- a/layouts/partials/docs/inject/head.html
+++ b/layouts/partials/docs/inject/head.html
@@ -3,7 +3,11 @@
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v9.0.0/ol.css">
 <style>
-    .release-data-container tr:target {
+    table.release-data-container tr:target {
         background: mediumseagreen;
+    }
+
+    .ol-osm-layer {
+        filter: grayscale(100%);
     }
 </style>
