#12: Popup with object info on map click

--- a/layouts/partials/docs/inject/head.html
+++ b/layouts/partials/docs/inject/head.html
@@ -1,4 +1,6 @@
 <script src="https://cdn.jsdelivr.net/npm/ol@v9.0.0/dist/ol.js"></script>
+<script src="{{ "/js/kb.js" | urlize | relURL }}"></script>
+<script src="{{ "/js/kb-utils.js" | urlize | relURL }}"></script>
 <script src="{{ "/js/map.js" | urlize | relURL }}"></script>
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v9.0.0/ol.css">
