--- a/layouts/shortcodes/map.html
+++ b/layouts/shortcodes/map.html
@@ -1,6 +1,68 @@
 <div>
     <div id="map-container" style="height: {{ .Get "height" }}px"></div>
 </div>
+<style>
+    .ol-popup {
+        position: absolute;
+        background-color: white;
+        box-shadow: 0 1px 4px rgba(0,0,0,0.2);
+        padding: 15px;
+        border-radius: 10px;
+        border: 1px solid #cccccc;
+        bottom: 12px;
+        left: -50px;
+        min-width: 280px;
+    }
+    .ol-popup:after, .ol-popup:before {
+        top: 100%;
+        border: solid transparent;
+        content: " ";
+        height: 0;
+        width: 0;
+        position: absolute;
+        pointer-events: none;
+    }
+    .ol-popup:after {
+        border-top-color: white;
+        border-width: 10px;
+        left: 48px;
+        margin-left: -10px;
+    }
+    .ol-popup:before {
+        border-top-color: #cccccc;
+        border-width: 11px;
+        left: 48px;
+        margin-left: -11px;
+    }
+    .ol-popup a.ol-popup-closer {
+        text-decoration: none;
+        position: absolute;
+        top: 2px;
+        right: 8px;
+    }
+    .ol-popup a.ol-popup-closer:after {
+        content: "✖";
+    }
+
+    .ol-popup .ol-popup-content div.item-image {
+        min-height: 100px;
+        background: linear-gradient(45deg,#a1a1a1,#ccffe5,#ffb0a5);
+        background-size: 180% 180%;
+        animation: gradient-animation 3s ease infinite;
+    }
+
+    @keyframes gradient-animation {
+        0% {
+            background-position: 0% 50%;
+        }
+        50% {
+            background-position: 100% 50%;
+        }
+        100% {
+            background-position: 0% 50%;
+        }
+    }
+</style>
 <script>
     SecretSpotMap.buildMap(
         document.getElementById('map-container'),
