#16 Spinner on vector source loading

--- a/layouts/partials/docs/inject/head.html
+++ b/layouts/partials/docs/inject/head.html
@@ -4,15 +4,7 @@
 <script src="{{ "/js/map.js" | urlize | relURL }}"></script>
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v9.0.0/ol.css">
-<style>
-    table.release-data-container tr:target {
-        background: mediumseagreen;
-    }
-
-    .ol-osm-layer {
-        filter: grayscale(100%);
-    }
-</style>
+<link rel="stylesheet" href="{{ "/css/style.css" | urlize | relURL }}">
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LP3MQCTFGB"></script>
