--- a/layouts/shortcodes/raster-map.html
+++ b/layouts/shortcodes/raster-map.html
@@ -1,5 +1,5 @@
 <div>
-    <div id="map-container" style="height: {{ .Get "height" }}px"></div>
+    <div id="map-container" class="map-container" style="height: {{ .Get "height" }}px"></div>
 </div>
 <script>
     (function (container) {
