--- a/layouts/partials/docs/inject/head.html
+++ b/layouts/partials/docs/inject/head.html
@@ -1,10 +1,5 @@
-<script src="https://cdn.jsdelivr.net/npm/ol@v9.0.0/dist/ol.js"></script>
-<script src="{{ "/js/kb.js" | urlize | relURL }}"></script>
-<script src="{{ "/js/kb-utils.js" | urlize | relURL }}"></script>
-<script src="{{ "/js/map.js" | urlize | relURL }}"></script>
-
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v9.0.0/ol.css">
-<link rel="stylesheet" href="{{ "/css/style.css" | urlize | relURL }}">
+{{ $css := (resources.Match "**/*.css") | resources.Concat "css/bundle.css" | minify | resources.Fingerprint "sha512" }}
+<link rel="stylesheet" href="{{ $css.RelPermalink }}"/>
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LP3MQCTFGB"></script>
