--- a/layouts/shortcodes/map.html
+++ b/layouts/shortcodes/map.html
@@ -2,7 +2,9 @@
     <div id="map-container" class="map-container" style="height: {{ .Get "height" }}px"></div>
 </div>
 <script>
-    SecretSpotMap.buildMap(
-        document.getElementById('map-container'),
-    );
+    window.addEventListener('load', () => {
+        SecretSpotMap.buildMap(
+            document.getElementById('map-container'),
+        );
+    });
 </script>
